--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
-            android:id="@+id/labButton"/>
+            android:id="@+id/lapButton"/>
     <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,6 +50,6 @@
             app:layout_constraintTop_toBottomOf="@+id/secTextView" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/fab">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                      android:orientation="vertical" android:id="@+id/labLayout"/>
+                      android:orientation="vertical" android:id="@+id/lapLayout"/>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
